[gd_scene load_steps=4 format=3 uid="uid://c33t5ftn4sr3t"]

[ext_resource type="Script" uid="uid://fgcfw68lk2f6" path="res://scripts/bullet.gd" id="1_mkf8s"]

[sub_resource type="SphereMesh" id="SphereMesh_h1aey"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mkf8s"]
radius = 0.0999664

[node name="Bullet" type="Node3D"]
script = ExtResource("1_mkf8s")

[node name="BulletMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
mesh = SubResource("SphereMesh_h1aey")

[node name="BulletRayCast" type="RayCast3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
target_position = Vector3(0, 0.255, 0)

[node name="StaticBody3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("SphereShape3D_mkf8s")

[connection signal="body_entered" from="StaticBody3D" to="." method="_on_static_body_3d_body_entered"]
